--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "inkling"
-version = "1.0.0-pre.1"
-authors = ["Petter Johansson"]
+version = "1.1.0"
+authors = ["Petter Johansson","Duane Sibilly"]
 description = "Limited implementation of the Ink markup language."
-edition = "2018"
+edition = "2021"
 # license = "Parity-7.0.0"
 license-file = "LICENSE.md"
 readme = "README.md"
