--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,5 +1,4 @@
 name: Rust
-
 on:
   push:
     branches: [ "develop", "master" ]
@@ -15,8 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: Swatinem/rust-cache@v2.2.1
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    # - name: Run tests
+    #   run: cargo test --verbose
